validation message overlapping issue fixed

--- a/src/components/commonCss/global.scss
+++ b/src/components/commonCss/global.scss
@@ -107,6 +107,10 @@ a:hover {
 .w-100 {
   width: 100%;
 }
+.mtn1 {
+  margin-top: -3px;   //for invalid error message spacing
+  padding-left: 5px;
+}
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
